# sample

./: .replit  COMMIT_EDITMSG  HEAD  Pasted-Title-Agentic-AI-Based-Adaptive-Learning-Platform-for-D_1764914898672.txt  __init__.py  abi  adaptive_engine.py  agent-ledger  app.py  base.html  content_personalization.py  dashboard.html  design_guidelines.md  emotion_detector.py  error.html  help.html  helpers.py  index  index.html  lesson.html  main  models.py  plot_utils.py  progress.html  progress_tracker.py  pyproject.toml  quiz.html  quiz_result.html  register.html  replit-agent  replit.md  routes.py  seed_data.py  settings.html  sign_language_detector.py  stt_engine.py  style.css  tts_engine.py
